# global_freshwater_intelligence_project

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  render.yaml
.github/workflows/: ci.yml  deploy-pages.yml  r-ci.yml
analysis/: .lintr  DESCRIPTION  README.md
analysis/R/: load_panel.R  models.R  results_table.R
analysis/tests/: testthat.R
analysis/tests/fixtures/: panel_fixture.csv
analysis/tests/testthat/: test_h1_gdp.R  test_h2_h6.R  test_h6_inequality.R  test_h7_groundwater.R  test_load_panel.R  test_placeholder.R
dashboard/: README.md  package-lock.json  package.json  vite.config.ts
dashboard/public/data/: global-risk.json  hypotheses.json
dashboard/src/: App.tsx
dashboard/src/api/: client.ts
dashboard/src/components/: CountrySearch.tsx
dashboard/src/panels/: CountryDeepDive.tsx  GlobalWaterAtlas.tsx  (+2 more)
docs/: GFIP_Master_Documentation_v1.0.docx  TDD_CONTRACT.md
notebooks/: 01_eda.ipynb
scripts/: generate_static.py
src/api/: main.py  schemas.py
src/ingest/: acled.py  aquastat.py  fsi.py  grace.py  grace_panel.py  ucdp.py  undesa.py  unhcr.py  unodc.py  who.py  worldbank.py
src/models/: compound_risk.py  features.py  instability.py  migration.py  scarcity.py  train_all.py
src/pipeline/: assemble.py  master_panel.py  validate.py
tests/: conftest.py  test_package.py
tests/api/: test_endpoints.py
tests/ingest/: test_acled.py  test_aquastat.py  test_fsi.py  test_grace.py  test_grace_panel.py  test_ucdp.py  test_undesa.py  test_unhcr.py  test_unodc.py  test_who.py  test_worldbank.py
tests/models/: test_compound_risk.py  test_features.py  test_instability.py  test_migration.py  test_scarcity.py
tests/pipeline/: test_master_panel.py  test_validate.py
(+385 files in other folders)
